--- a/training-project/src/styles/common.css
+++ b/training-project/src/styles/common.css
@@ -1,24 +1,101 @@
 /* Training progress styles */
-.training-progress {
+.training-progress-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  margin-top: 20px;
   flex-direction: column;
+  background-color: #1E1F1A;
+  border-radius: 10px;
+  padding: 20px;
+  color: white;
+  height: 10rem;
+  margin: 1rem;
 }
 
-.progress-bar-container {
-    width: 100%;
-    height: 20px;
-    background-color: #ddd;
-    border-radius: 4px;
-  }
-  
-  .progress-bar {
-    height: 100%;
-    background-color: #4caf50; /* Green */
-    border-radius: 4px;
-    text-align: center;
-    line-height: 20px;
-    color: white;
-    
-  }
+.button-container-progress {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.icon-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 2.7rem;
+  color: #FCA311;
+}
+
+.icon-button:focus {
+  outline: none;
+}
+
+
+
+.error-message {
+  color: red;
+}
+
+/* WeightTracker */
+.weight-tracker {
+  max-width: 500px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: #1E1F1A;
+  border-radius: 10px;
+  margin: 1rem;
+  padding: 20px;
+}
+
+.weight-tracker__title {
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+}
+
+.weight-tracker_form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.weight-tracker_label {
+  margin-bottom: 10px;
+}
+
+.weight-tracker_input {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.weight-tracker_submit-btn {
+  padding: 8px 15px;
+  background-color: #FCA311;
+  color: #1E1F1A;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.weight-tracker__submit-btn:hover {
+  background-color: #a86a06;
+}
+
+.weight-tracker_error {
+  color: red;
+  margin-top: 10px;
+}
+
+.weight-tracker_chart-container {
+  margin-top: 20px;
+}
+
+.weight-tracker_chart {
+  width: 100%;
+  height: 300px;
+}
