--- a/training-project/src/styles/App.css
+++ b/training-project/src/styles/App.css
@@ -1,14 +1,14 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-  }
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
 
-  .inter-font {
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-    font-variation-settings:
-      "slnt" 0;
-  }
+.inter-font {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  font-variation-settings: "slnt" 0;
+}
