--- a/training-project/src/styles/Dashboard.css
+++ b/training-project/src/styles/Dashboard.css
@@ -1,3 +1,7 @@
 .dashboard-container {
   padding-bottom: 1px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
