--- a/training-project/src/styles/Login.css
+++ b/training-project/src/styles/Login.css
@@ -1,86 +1,189 @@
-.login-container {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh; 
-  z-index: 10000;
+@media screen and (max-width: 769px) {
+  .login-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    z-index: 10000;
+  }
+
+  .background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: #1e1f1a;
+  }
+
+  .content {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    color: white;
+  }
+
+  .button-container {
+    margin-top: auto;
+    margin-bottom: 12rem;
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .l-button {
+    padding: 10px 20px;
+    background-color: #fca311;
+    color: rgb(0, 0, 0);
+    font-size: 1rem;
+    width: 16rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 20px;
+    margin: 10px;
+  }
+
+  .motivation-q {
+    position: relative; /* Change to relative */
+    margin-top: 23rem; /* Use margin-top instead of absolute positioning */
+    background-color: #1e1f1a;
+    color: white;
+    border-radius: 10px;
+    padding: 1rem;
+  }
+
+  .l-button:hover {
+    background-color: #bb7607;
+  }
+
+  .login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #1e1f1a;
+    border-radius: 10px;
+  }
+
+  .input-field {
+    width: 15rem;
+    padding: 11px;
+    margin: 10px;
+    border-radius: 20px;
+    border: none;
+  }
+
+  .b-button {
+    padding: 5px 10px;
+    background-color: #fca311;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    border: none;
+    cursor: pointer;
+    border-radius: 20px;
+    margin: 10px;
+  }
+
+  .register-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #1e1f1a;
+    border-radius: 10px;
+  }
 }
 
-.background-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-color: #1E1F1A;
-}
+/* Login Container Desktop Styling */
+@media screen and (min-width: 770px) {
+  .login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: #1e1f1a;
+    z-index: 10000;
+  }
 
-.content {
-  position: relative;
-  z-index: 1;
-  text-align: center;
-  color: white;
-}
+  .background-image {
+    display: none; /* Hide background image on desktop */
+  }
 
-.button-container {
-  margin-top: auto; 
-  margin-bottom: 12rem;
-  position: relative;
-  z-index: 1; 
-  text-align: center;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+  .content {
+    text-align: center;
+    color: white;
+  }
 
-.l-button {
-  padding: 10px 20px;
-  background-color: #FCA311;
-  color: rgb(0, 0, 0);
-  font-size: 1rem;
-  width: 16rem;
-  border: none;
-  cursor: pointer;
-  border-radius: 20px;
-  margin: 10px;
-}
+  .button-container {
+    margin-top: auto;
+    margin-bottom: 12rem;
+    text-align: center;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-.motivation-q {
-  position: relative; /* Change to relative */
-  margin-top: 23rem; /* Use margin-top instead of absolute positioning */
-}
+  .l-button {
+    padding: 10px 20px;
+    background-color: #fca311;
+    color: rgb(0, 0, 0);
+    font-size: 1rem;
+    width: 16rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 20px;
+    margin: 10px;
+    transition: background-color 0.3s ease;
+  }
 
-.l-button:hover {
-  background-color: #bb7607;
-}
+  .l-button:hover {
+    background-color: #bb7607;
+  }
 
-.login-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  
-}
+  .motivation-q {
+    margin-top: 23rem;
+  }
 
-.input-field {
-  width: 15rem;
-  padding: 11px;
-  margin: 10px;
-  border-radius: 20px;
-  border: none;
-}
+  .login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-.b-button {
-  padding: 5px 10px;
-  background-color: #FCA311;
-  color: rgb(0, 0, 0);
-  font-size: 15px;
-  border: none;
-  cursor: pointer;
-  border-radius: 20px;
-  margin: 10px;
+  .input-field {
+    width: 15rem;
+    padding: 11px;
+    margin: 10px;
+    border-radius: 20px;
+    border: none;
+  }
+
+  .b-button {
+    padding: 5px 10px;
+    background-color: #fca311;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    border: none;
+    cursor: pointer;
+    border-radius: 20px;
+    margin: 10px;
+  }
+
+  .register-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #1e1f1a;
+    border-radius: 10px;
+  }
 }
