--- a/training-project/src/styles/UserStats.css
+++ b/training-project/src/styles/UserStats.css
@@ -1,56 +1,56 @@
 .user-stats {
-    margin: 1rem;
-    padding: 20px;
-    background-color: #1E1F1A;
-    color: white;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .stats-container {
-    display: flex;
-    justify-content: space-between;
-    
-  }
-  
-  .latest-records, .comparison {
-    flex: 1;
-    border-top: 1px solid #ccc;
-  }
-  
-  .record-label {
-    font-weight: bold;
-    font-size: 0.8rem;
-  }
-  
-  .no-change {
-    color: black;
-  }
-  
-  .increase {
-    color: green;
-  }
-  
-  .decrease {
-    color: red;
-  }
-  
-  .ul-container {
-    list-style-type: none;
-    padding: 0;
-  }
-  .ul-container-1 {
-    list-style-type: none;
-    padding: 0;
-    margin-top: 44px;
-  }
+  margin: 1rem;
+  padding: 20px;
+  background-color: #1e1f1a;
+  color: white;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  .li-stats {
-    margin-bottom: 10px;
-  }
-  .title-stats {
-   justify-content: center;
-    align-items: center;
-  }
+.stats-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.latest-records,
+.comparison {
+  flex: 1;
+  border-top: 1px solid #ccc;
+}
+
+.record-label {
+  font-weight: bold;
+  font-size: 0.8rem;
+}
+
+.no-change {
+  color: black;
+}
+
+.increase {
+  color: green;
+}
+
+.decrease {
+  color: red;
+}
+
+.ul-container {
+  list-style-type: none;
+  padding: 0;
+}
+.ul-container-1 {
+  list-style-type: none;
+  padding: 0;
+  margin-top: 44px;
+}
+
+.li-stats {
+  margin-bottom: 10px;
+}
+.title-stats {
+  justify-content: center;
+  align-items: center;
+}
