--- a/training-project/src/styles/PreviousLog.css
+++ b/training-project/src/styles/PreviousLog.css
@@ -66,7 +66,7 @@
   .sets-list {
     list-style-type: none;
     padding: 0;
-    text-align: left; /* Align list items to the left */
+    text-align: left; 
   }
 
   .sets-list li {
