--- a/training-project/src/styles/ProfileHeader.css
+++ b/training-project/src/styles/ProfileHeader.css
@@ -107,6 +107,13 @@
     border-radius: 50%;
     margin-right: 10px;
   }
+
+  .preloaded-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-left: 10px;
+  }
 }
 
 @media screen and (min-width: 770px) {
